@@ -211,6 +211,9 @@ Release 2.8.0 - UNRELEASED
     YARN-4653. Document YARN security model from the perspective of
     Application Developers. (Steve Loughran via jianhe)
 
+    YARN-4761. NMs reconnecting with changed capabilities can lead to wrong cluster
+    resource calculations on fair scheduler. (Sangjin Lee via zxu)
+
   OPTIMIZATIONS
 
   BUG FIXES
